Исправление css Social & Feedback

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <p class="contacts-line">(+88) 017 617 46373</p>
                 </address>
             </section>
-            <div class="feedback-right contacts-decor"></div>
+            <div class="contacts-decor"></div>
         </div>
     </main>
     <footer class="footer">
